update: README.md更新 && preview，upload判断逻辑更新

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wechatprogram-ci",
+  "name": "@joymo/wechatprogram-ci",
   "version": "1.0.0",
   "description": "微信小程序自动化构建脚本",
   "type": "commonjs",
