--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@joymo/wechatprogram-ci",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "微信小程序自动化构建脚本",
   "type": "commonjs",
   "main": "src/main.js",
@@ -18,8 +18,14 @@
   "author": "ruichao.lin@abite.com",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "colors": "^1.4.0",
     "cross-env": "^7.0.3",
-    "miniprogram-ci": "^1.6.1"
+    "miniprogram-ci": "^1.2.3"
+  },
+  "devDependencies": {
+    "jest": "^27.2.5",
+    "babel-jest": "^27.2.5"
   }
 }
