--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@joymo/wechatprogram-ci",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "微信小程序自动化构建脚本",
   "type": "commonjs",
   "main": "src/main.js",
@@ -18,6 +18,9 @@
   "author": "ruichao.lin@abite.com",
   "license": "MIT",
   "devDependencies": {
+    "jest": "^26.0.0",
+    "babel-jest": "^26.0.0",
+    "@babel/preset-env": "^7.8.0",
     "colors": "^1.4.0",
     "cross-env": "^7.0.3",
     "miniprogram-ci": "^1.2.3"
